--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <header class="header">
                 <div class="header__logo">
-                    <img src="/assets/img/logo.svg" alt="">
+                    <img src="assets/img/logo.svg" alt="">
                 </div>
                 <nav class="header__menu">
                     <ul class="header__ul">
@@ -33,7 +33,7 @@
                 <p class="preview__name">War For Love</p>
                 <div class="preview__player">
                     <div class="preview__play">
-                        <img src="/assets/img/play.svg" alt="">
+                        <img src="assets/img/play.svg" alt="">
                     </div>
                     <div class="preview__line">
                         <div class="fully__line"></div>
@@ -44,7 +44,7 @@
             <div class = "blog">
                 <div class="blog__item">
                     <div class="blog__img">
-                        <img src="/assets/img/blog_1.png" alt="">
+                        <img src="assets/img/blog_1.png" alt="">
                         <div class="blog__text">
                             <p>Working on my upcoming full-lenth album that`s releasing later this year.</p>
                         </div>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="blog__item">
                     <div class="blog__img">
-                        <img src="/assets/img/blod_2.png" alt="">
+                        <img src="assets/img/blod_2.png" alt="">
                         <div class="blog__text">
                             <p>Halloween vibes. <br> Listen my new track!</p>
                         </div>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="blog__item">
                     <div class="blog__img">
-                        <img src="/assets/img/blog_3.png" alt="">
+                        <img src="assets/img/blog_3.png" alt="">
                         <div class="blog__text">
                             <p>WarForLove is OUT NOW!! Stream it here!</p>
                         </div>
