add new sections

--- a/index.html
+++ b/index.html
@@ -70,6 +70,126 @@
         </div>
         
     </section>
-    
+    <section class = "album">
+        <div class="container album__container">
+            <div class="album__content">
+                <div class="album__title">
+                    <div class="album__logo">
+                        <img src="assets/img/album__logo.svg" alt="">
+                    </div>
+                    <h1 class="album__logo__text">Bright Lights</h1>
+                </div>
+                <div class="album__text">
+                    Bright Lights is a multi-Grammy nominated singer, songwriter, DJ and record producer. She has written for numerous 
+                    <br>
+                    <br>
+                    pop stars including Britney Spears, Justin Bieber, Usher and Beyoncé. Her catalog has amassed over 1 billion streams worldwide. More than 100 million of those streams can be attributed to her artist career and include such hits as Porter Robinson's "Language," 3LAU's "How You Love Me" and her own single "Runaway." She was also a featured vocalist on Zedd's #1 Clarity album. Her latest music video, "Put It Down," reached 1 million streams in the first week, releasing independently. Bright Lights is currently in the studio working on a self-produced album slated for release in 2020. 
+                </div>
+                <div class="album__points__container">
+                    <div class="album__point">
+                        <div class="point__logo"></div>
+                        <p class = "point__text">Based in: Los Angeles</p>
+                    </div>
+                    <div class="album__point">
+                        <div class="point__logo"></div>
+                        <p class = "point__text">Founded in 2011</p>
+                    </div>
+                    <div class="album__point">
+                        <div class="point__logo"></div>
+                        <p class = "point__text">Genre: #DancePop</p>
+                    </div>
+                    <div class="album__point">
+                        <div class="point__logo"></div>
+                        <p class = "point__text">Label: 333 Recordings</p>
+                    </div>
+                </div>
+            </div>
+            <div class="album__images">
+                <div class="album__image album__image__front">
+                    <img src="assets/img/album__img_1.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="media">
+        <div class="container">
+            <div class="media__content">
+                <div class="media__info">
+                    <p class="media__text">“In an age where mainstream music is designed to be as
+                        easily consumed as possible, listening to Bright Lights is
+                        refreshing, to say the least. Her sound is perfect for radio
+                        but complex enough to separate her from other pop newcomers.”</p>
+                    <a href="" class="media__link">PopULove.net</a>
+                </div>
+                <div class="media__image">
+                    <img src="assets/img/media_img.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="nextmedia">
+        <div class="container">
+            <div class="nextmedia__content">
+                <div class="nextmedia__left">
+                    <div class="st__area">
+                        <div class="nd__area">
+                            <div class="rd__area">
+                                <img src="assets/img/nextmedia.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nextmedia__right">
+                    <div class="nextmedia__title">
+                        <div class="nextmedia__logo">
+                            <img src="assets/img/album__logo.svg" alt="">
+                        </div>
+                        <h1 class = 'nextmedia__text'>Last tracks</h1>
+                    </div>
+                    <div class="preview__player nextmedia__player">
+                        <div class="preview__play">
+                            <img src="assets/img/play.svg" alt="">
+                        </div>
+                        <div class="preview__line">
+                            <div class="fully__line"></div>
+                        </div>
+                        <span class = "preview__time">00:22-02:54</span>
+                    </div>
+                    <div class="tracks">
+                        <div class="tracks__item">
+                            <span>01</span>
+                            <p class = "tracks__name">3LAU, Bright Lights — How You Love Me</p>
+                        </div>
+                        <div class="tracks__item">
+                            <span>02</span>
+                            <p class = "tracks__name">Bright Lights, Kaleena Zanders, Kandy — War For Love
+                            </p>
+                        </div>
+                        <div class="tracks__item">
+                            <span>03</span>
+                            <p class = "tracks__name">Pink Is Punk, Benny Benassi, Bright Lights — Ghost </p>
+                        </div>
+                        <div class="tracks__item">
+                            <span>04</span>
+                            <p class = "tracks__name">Hardwell, Dyro, Bright Lights — Never Say Goodbye </p>
+                        </div>
+                        <div class="tracks__item">
+                            <span>05</span>
+                            <p class = "tracks__name">Zeds Dead, Dirtyphonics, Bright Lights — Where Are You Now </p>
+                        </div>
+                        <div class="tracks__item">
+                            <span>05</span>
+                            <p class = "tracks__name">Zedd, Bright Lights — Follow You Down </p>
+                        </div>
+                    </div>
+                    <div class="nextmedia__follow">
+                        <p class = "follow">Follow me:</p>
+                        <img src="assets/img/spotify.svg" alt="">
+                        <img src="assets/img/itunes.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
