clear code, add comments for js components, add scss components

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/adaptive.css">
-    
     <title>Project №1</title>
 </head>
 <body>
@@ -30,7 +28,7 @@
         <div class="container">
             <header class="header">
                 <div class="header__logo">
-                    <img src="assets/img/logo.svg" alt="">
+                    <a href="index.html"><img src="assets/img/logo.svg" alt=""></a>
                 </div>
                 <nav class="header__menu">
                     <ul class="header__ul">
