--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
                 <div class="header__burger">
                     <span></span>
                 </div>
-                
             </header>
             <div class="preview__text">
                 <h1 class="preview__title">New Single</h1>
                 <p class="preview__name">War For Love</p>
                 <div class="preview__player">
-                    <audio class = "preview__audio" src="assets/sound/Bright Lights - War For Love.mp3"></audio>
+                    <audio class = "preview__audio" src="assets/sound/Bright Lights - War For Love1.mp3"></audio>
                     <div class="preview__play"></div>
                     <div class="preview__wrapper">
                         <div class="preview__line">
@@ -57,7 +56,7 @@
                         </div>
                     </div>
                     <span class = "preview__time">
-                        <p class = "preview__current"> 00:45 -</p>
+                        <p class = "preview__current"> 00:45 - </p>
                         <p class = "preview__duration">02:55</p>
                       
                     </span>
