fix player image

--- a/index.html
+++ b/index.html
@@ -207,8 +207,10 @@
                     </div>
                     <div class="nextmedia__follow">
                         <p class = "follow">Follow me:</p>
-                        <img src="assets/img/spotify.svg" alt="">
-                        <img src="assets/img/itunes.svg" alt="">
+                        <a href="https://open.spotify.com/artist/2AoeqcUs8DySgZRJ9yV4Ou?si=Dr2XjESdSIC7-HmolUi71g" target = "_blank"><img src="assets/img/spotify.svg" alt="" ></a> 
+                        <a href="https://music.apple.com/us/artist/bright-lights/295547571" target = "_blank"><img src="assets/img/itunes.svg" alt=""></a>
+                        
+                        
                     </div>
                 </div>
             </div>
