add animation in album section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="album__content">
                 <div class="album__title">
                     <div class="album__logo">
-                        <img src="assets/img/album__logo.svg" alt="">
+                        <img src="assets/img/6th40q.gif" alt="">
                     </div>
                     <h1 class="album__logo__text">Bright Lights</h1>
                 </div>
@@ -125,7 +125,7 @@
             </div>
             <div class="album__images">
                 <div class="album__image album__image__front">
-                    <img src="assets/img/album__img_1.png" alt="">
+                    <img class = "image__transform" src="assets/img/album__img_1.png" alt="">
                 </div>
             </div>
         </div>
@@ -379,5 +379,6 @@
     <script src="assets/js/navigation.js"></script>
     <script src="assets/js/burger.js"></script>
     <script src="assets/js/player.js"></script>
+    <script src="assets/js/animation.js"></script>
 </body>
 </html>
